Finished the data loading and generation page

--- a/core/css/atlas-css.css
+++ b/core/css/atlas-css.css
@@ -6,10 +6,10 @@
   margin-bottom: 0.5em;
 }
 
-.brc-util.btn  {
+/* .brc-util.btn  {
   display: block;
   margin-bottom: 0.5em;
-}
+} */
 
 #brc-file-btn-parent {
   display: inline-block;
