Added configuration to set default mapping resolution

--- a/core/css/atlas-css.css
+++ b/core/css/atlas-css.css
@@ -16,3 +16,8 @@
   position: relative;
   top: 10px;
 }
+
+#brc-tab-gallery.shift-caption .lightGallery-captions {
+  transform: translate(0, -80px);
+}
+
